# si

./: .gitignore
00._Mandatories/01._Mandatory_I/00-data-parsing-server-part-II/: index.js  package-lock.json  package.json
00._Mandatories/01._Mandatory_I/00-data-parsing-server-part-II/data/: data.json
00._Mandatories/01._Mandatory_I/00-data-parsing-server-part-II/node/: package-lock.json
00._Mandatories/01._Mandatory_I/01a-data-parsing/: package-lock.json  package.json  parser.js
00._Mandatories/01._Mandatory_I/01a-data-parsing/python/: main.py  pyproject.toml
00._Mandatories/01._Mandatory_I/01a-data-parsing/python/data/: data.yaml
01._introduction/: getgooglehome.sh  paymentiframe.html
02._Text-based_Data_Files/: me.csv  me.json  me.txt  me.xml  me.yaml
03._Modules/html_classic/: index.js
03._Modules/html_esmodules/: index.html  myModule.js
03._Modules/node_commonjs/: index.js  myModule.js
03._Modules/node_esmodules/: index.js  myModule.js
03._Modules/python_main/: library_importer.py  potential_library.py
03._Modules/python_modules/: main.py
03._Modules/python_modules/my_module/: __init__.py  file_one.py  file_two.py
04._Encode_Decode/01._node/: index.js
04._Encode_Decode/02._python/: main.py
05._Python_Virtual_Environment/01._venv/my_environment/: pyvenv.cfg
05._Python_Virtual_Environment/03._poetry/: pyproject.toml
06._Simple_Servers/02._python/: main.py  pyproject.toml
08._Server-Server/01._node/: app.js  package-lock.json  package.json
08._Server-Server/02._python/: main.py  pyproject.toml
(+19 files in other folders)
